--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
