--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.7.1",
     "react-text-mask": "^5.5.0",
     "rsuite": "^5.32.0",
     "slick-carousel": "^1.8.1",
